--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -14,22 +14,26 @@
                 <a href=""><img src="assets/images/linkedin.png" alt="" width="35" style="padding: 5px"></a>
                 <a href=""><img src="assets/images/behance.png" alt="" width="35" style="padding: 5px"></a>
                 <a href=""><img src="assets/images/twitter.png" alt="" width="35" style="padding: 5px"></a>
-                
+
                 <!-- <li class="freelance">Freelance</li>
                 <li class="urgent">Urgent</li> -->
 
             </ul>
             <div class="d-md-flex align-items-center justify-content-between">
-                <a href="mailto:shiromanivivan@gmail.com"><div class="last-date">jhondoe@gmail.com</div></a><br>
-                <a href="tel:+4733378901"><div class="last-date">+4733378901</div></a><br>
-                
-                <a routerLink="/profile-authentication" class="default-btn">View Resume</a>
+                <a href="mailto:shiromanivivan@gmail.com">
+                    <div class="last-date">jhondoe@gmail.com</div>
+                </a><br>
+                <a href="tel:+4733378901">
+                    <div class="last-date">+4733378901</div>
+                </a><br>
+
+                <a routerLink="/profile-authentication" class="default-btn">View My Profile</a>
             </div>
             <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
         </div>
     </div>
-    
-    <div class="container mt-5 mb-1" style="text-align: center;"> 
+
+    <div class="container mt-5 mb-1" style="text-align: center;">
         <h3>Job Application Stats</h3>
     </div>
     <div class="container mt-3 p-0">
@@ -68,48 +72,68 @@
 
 
 
-            
-              <ol class="list-group list-grou">
+
+            <ol class="list-group list-grou">
                 <div class="dropdown">
 
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
 
-                                <div class="fw-bold">Selected</div>
-                                
-                                Content for list item
-                        </div>
-                                <span class="badge bg-primary rounded-pill">14</span>
+                            <div class="fw-bold">Applied</div>
 
-                            </li>
+                            Content for list item
+                        </div>
+                        <span class="badge bg-primary rounded-pill">14</span>
+
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+
+                            <div class="fw-bold">Shortlisted</div>
+
+                            Content for list item
+                        </div>
+                        <span class="badge bg-primary rounded-pill">14</span>
+
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+
+                            <div class="fw-bold">Selected</div>
+
+                            Content for list item
+                        </div>
+                        <span class="badge bg-primary rounded-pill">14</span>
+
+                    </li>
                 </div>
 
-                
+<!-- 
                 <li class="list-group-item d-flex justify-content-between align-items-start">
-                  <div class="ms-2 me-auto">
-                    <div class="fw-bold">In-Touch</div>
-                    Content for list item
-                  </div>
-                  <span class="badge bg-primary rounded-pill">14</span>
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">In-Touch</div>
+                        Content for list item
+                    </div>
+                    <span class="badge bg-primary rounded-pill">14</span>
                 </li>
 
 
                 <li class="list-group-item d-flex justify-content-between align-items-start">
-                  <div class="ms-2 me-auto">
-                    <div class="fw-bold">Not-Selected</div>
-                    Content for list item
-                  </div>
-                  <span class="badge bg-primary rounded-pill">14</span>
-                </li>
-              </ol>
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">Not-Selected</div>
+                        Content for list item
+                    </div>
+                    <span class="badge bg-primary rounded-pill">14</span>
+                </li> -->
+            </ol>
 
 
 
         </div>
     </div>
-    
 
-    
+
+
 
 </div>
 
@@ -119,7 +143,7 @@
 
 <div class="row p-5">
     <div class="col-lg-12 col-sm-6 col-md-6">
-        
+
         <div class="job-card">
             <div class="content">
                 <div class="job-image">
@@ -127,166 +151,172 @@
                         <img src="assets/images/job/job1.jpg" alt="job-image">
                     </a>
                 </div>
-            <div class="px-5">
-                <h2 class=""><a routerLink="/job-details">Company Name - A</a></h2>
+                <div class="px-5">
+                    <h2 class=""><a routerLink="/job-details">Company Name - A</a></h2>
 
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-4 dot-success"></div>
-                        <div class="col-sm-8"><strong>Selected</strong></div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-4 dot-success"></div>
+                            <div class="col-sm-8"><strong>Selected</strong></div>
+                        </div>
                     </div>
-                </div>
                     <!-- <span class="dot-success mt-4"></span> -->
                     <!-- <div class="mt-0 mx-1"> <strong>Selected</strong> </div> -->
-                <br>
+                    <br>
 
-                <div style="font-size:20px">
-                <ul class="job-list1">
-                    <li><i class=""></i> Product Design Job</li>
-                <li><i class=""></i> Applied On - 
-                    <span class="date_of_appy">10 Dec 2022</span>
-                </li>
-                </ul>
-                </div>
-                
-            </div>
-            
-            <div class="container px-5">
-                <div class="row">
-
-                    <div class="col-sm-12" style="font-size: 18px">
-                        <i class="ri-map-pin-line"></i> 305 Hicks St Brooklyn, NY
+                    <div style="font-size:20px">
+                        <ul class="job-list1">
+                            <li><i class=""></i> Product Design Job</li>
+                            <li><i class=""></i> Applied On -
+                                <span class="date_of_appy">10 Dec 2022</span>
+                            </li>
+                        </ul>
                     </div>
-    
-                </div>
-            </div>
-            
-            <div class="job-sub-content px-5">
-                <div class="job-list">
-                    <a href=""><li class="time" style="font-size:larger">Review Application</li></a>
-                    <!-- <li class="freelance">Freelance</li> -->
-                    <!-- <li class="urgent">Urgent</li> -->
-                </div>
-                <!-- <div class="price">$150 - $180 <span>/Per Week</span></div> -->
-            </div>
 
-            <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
-        </div>
-    </div>
-
-
-    <div class="job-card mt-5">
-        <div class="content">
-            <div class="job-image">
-                <a routerLink="/job-details">
-                    <img src="assets/images/job/job1.jpg" alt="job-image">
-                </a>
-            </div>
-        <div class="px-5">
-            <h2 class=""><a routerLink="/job-details">Company Name - A</a></h2>
-
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-4 dot-fail"></div>
-                    <div class="col-sm-8"><strong>Not-Selected</strong></div>
-                </div>
-            </div>
-                <!-- <span class="dot-success mt-4"></span> -->
-                <!-- <div class="mt-0 mx-1"> <strong>Selected</strong> </div> -->
-            <br>
-
-            <div style="font-size:20px">
-            <ul class="job-list1">
-                <li><i class=""></i> Product Design Job</li>
-            <li><i class=""></i> Applied On - 
-                <span class="date_of_appy">10 Dec 2022</span>
-            </li>
-            </ul>
-            </div>
-            
-        </div>
-        
-        <div class="container px-5">
-            <div class="row">
-
-                <div class="col-sm-12" style="font-size: 18px">
-                    <i class="ri-map-pin-line"></i> 305 Hicks St Brooklyn, NY
                 </div>
 
+                <div class="container px-5">
+                    <div class="row">
+
+                        <div class="col-sm-12" style="font-size: 18px">
+                            <i class="ri-map-pin-line"></i> 305 Hicks St Brooklyn, NY
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="job-sub-content px-5">
+                    <div class="job-list">
+                        <a href="">
+                            <li class="time" style="font-size:larger">Review Application</li>
+                        </a>
+                        <!-- <li class="freelance">Freelance</li> -->
+                        <!-- <li class="urgent">Urgent</li> -->
+                    </div>
+                    <!-- <div class="price">$150 - $180 <span>/Per Week</span></div> -->
+                </div>
+
+                <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
             </div>
         </div>
-        
-        <div class="job-sub-content px-5">
-            <div class="job-list">
-                <a href=""><li class="time" style="font-size:larger">Review Application</li></a>
-                <!-- <li class="freelance">Freelance</li> -->
-                <!-- <li class="urgent">Urgent</li> -->
+
+
+        <div class="job-card mt-5">
+            <div class="content">
+                <div class="job-image">
+                    <a routerLink="/job-details">
+                        <img src="assets/images/job/job1.jpg" alt="job-image">
+                    </a>
+                </div>
+                <div class="px-5">
+                    <h2 class=""><a routerLink="/job-details">Company Name - A</a></h2>
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-4 dot-fail"></div>
+                            <div class="col-sm-8"><strong>Not-Selected</strong></div>
+                        </div>
+                    </div>
+                    <!-- <span class="dot-success mt-4"></span> -->
+                    <!-- <div class="mt-0 mx-1"> <strong>Selected</strong> </div> -->
+                    <br>
+
+                    <div style="font-size:20px">
+                        <ul class="job-list1">
+                            <li><i class=""></i> Product Design Job</li>
+                            <li><i class=""></i> Applied On -
+                                <span class="date_of_appy">10 Dec 2022</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="container px-5">
+                    <div class="row">
+
+                        <div class="col-sm-12" style="font-size: 18px">
+                            <i class="ri-map-pin-line"></i> 305 Hicks St Brooklyn, NY
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="job-sub-content px-5">
+                    <div class="job-list">
+                        <a href="">
+                            <li class="time" style="font-size:larger">Review Application</li>
+                        </a>
+                        <!-- <li class="freelance">Freelance</li> -->
+                        <!-- <li class="urgent">Urgent</li> -->
+                    </div>
+                    <!-- <div class="price">$150 - $180 <span>/Per Week</span></div> -->
+                </div>
+
+                <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
             </div>
-            <!-- <div class="price">$150 - $180 <span>/Per Week</span></div> -->
         </div>
 
-        <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
-    </div>
-</div>
 
 
+        <div class="job-card mt-5">
+            <div class="content">
+                <div class="job-image">
+                    <a routerLink="/job-details">
+                        <img src="assets/images/job/job1.jpg" alt="job-image">
+                    </a>
+                </div>
+                <div class="px-5">
+                    <h2 class=""><a routerLink="/job-details">Company Name - A</a></h2>
 
-<div class="job-card mt-5">
-    <div class="content">
-        <div class="job-image">
-            <a routerLink="/job-details">
-                <img src="assets/images/job/job1.jpg" alt="job-image">
-            </a>
-        </div>
-    <div class="px-5">
-        <h2 class=""><a routerLink="/job-details">Company Name - A</a></h2>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-4 dot-inTouch"></div>
+                            <div class="col-sm-8"><strong>In-Touch</strong></div>
+                        </div>
+                    </div>
+                    <!-- <span class="dot-success mt-4"></span> -->
+                    <!-- <div class="mt-0 mx-1"> <strong>Selected</strong> </div> -->
+                    <br>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4 dot-inTouch"></div>
-                <div class="col-sm-8"><strong>In-Touch</strong></div>
+                    <div style="font-size:20px">
+                        <ul class="job-list1">
+                            <li><i class=""></i> Product Design Job</li>
+                            <li><i class=""></i> Applied On -
+                                <span class="date_of_appy">10 Dec 2022</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="container px-5">
+                    <div class="row">
+
+                        <div class="col-sm-12" style="font-size: 18px">
+                            <i class="ri-map-pin-line"></i> 305 Hicks St Brooklyn, NY
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="job-sub-content px-5">
+                    <div class="job-list">
+                        <a href="">
+                            <li class="time" style="font-size:larger">Review Application</li>
+                        </a>
+                        <!-- <li class="freelance">Freelance</li> -->
+                        <!-- <li class="urgent">Urgent</li> -->
+                    </div>
+                    <!-- <div class="price">$150 - $180 <span>/Per Week</span></div> -->
+                </div>
+
+                <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
             </div>
         </div>
-            <!-- <span class="dot-success mt-4"></span> -->
-            <!-- <div class="mt-0 mx-1"> <strong>Selected</strong> </div> -->
-        <br>
 
-        <div style="font-size:20px">
-        <ul class="job-list1">
-            <li><i class=""></i> Product Design Job</li>
-        <li><i class=""></i> Applied On - 
-            <span class="date_of_appy">10 Dec 2022</span>
-        </li>
-        </ul>
-        </div>
-        
-    </div>
-    
-    <div class="container px-5">
-        <div class="row">
-
-            <div class="col-sm-12" style="font-size: 18px">
-                <i class="ri-map-pin-line"></i> 305 Hicks St Brooklyn, NY
-            </div>
-
-        </div>
-    </div>
-    
-    <div class="job-sub-content px-5">
-        <div class="job-list">
-            <a href=""><li class="time" style="font-size:larger">Review Application</li></a>
-            <!-- <li class="freelance">Freelance</li> -->
-            <!-- <li class="urgent">Urgent</li> -->
-        </div>
-        <!-- <div class="price">$150 - $180 <span>/Per Week</span></div> -->
-    </div>
-
-    <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
-</div>
-</div>
-
-<!-- Jobs Details -->
-<!-- <div class="job-details-area ptb-100">
+        <!-- Jobs Details -->
+        <!-- <div class="job-details-area ptb-100">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-12">
